exports[`test ifWithAssignment(false) && ifWithAssignment(true) 1`] = `
"export { ifWithAssignment };

function ifWithAssignment(passIf) {
  let x;
  if ((x = 'hi') && passIf) {
    return x + passIf;
  } else {
    return !passIf + x;
  }
}"
`;

exports[`test ifWithAssignment(false) 1`] = `
"export { ifWithAssignment };

function ifWithAssignment(passIf) {
  let x = 'hi';

  return !passIf + x;
}"
`;

exports[`test ifWithAssignment(true) 1`] = `
"export { ifWithAssignment };

function ifWithAssignment(passIf) {
  let x = 'hi';

  return x + passIf;
}"
`;

exports[`test ifWithFunctionCall(false) && ifWithFunctionCall(true) 1`] = `
"export { ifWithFunctionCall };

function ifWithFunctionCall(passIf) {
  let thing;

  if (passIf && (a => thing = a)('hey')) {
    return thing + passIf;
  } else {
    return !passIf;
  }
}"
`;

exports[`test ifWithFunctionCall(false) 1`] = `
"export { ifWithFunctionCall };

function ifWithFunctionCall(passIf) {

  return !passIf;
}"
`;

exports[`test ifWithFunctionCall(true) 1`] = `
"export { ifWithFunctionCall };

function ifWithFunctionCall(passIf) {
  let thing;

  (a => thing = a)('hey');
  return thing + passIf;
}"
`;
